force-app/main/default/objects/Scheme_Basket_Product__c/Scheme_Basket_Product__c.object-meta.xml
<CustomObject>
    <description>Child of Scheme Basket (BRD 13.3). SKU + minimum qty that counts toward the bundle.</description>
    <label>Scheme Basket Product</label>
    <nameField>
        <displayFormat>SBP-{00000}</displayFormat>
        <label>Scheme Basket Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Basket Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>