force-app/main/default/objects/Scheme_Basket_Product__c/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <label>Min Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>