force-app/main/default/objects/Scheme_Basket_Product__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipName>Scheme_Basket_Products</relationshipName>
    <type>Lookup</type>
</CustomField>