force-app/main/default/objects/Scheme_Basket_Product__c/fields/Scheme_Basket__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Basket__c</fullName>
    <label>Scheme Basket</label>
    <referenceTo>Scheme_Basket__c</referenceTo>
    <relationshipLabel>Scheme Basket Products</relationshipLabel>
    <relationshipName>Scheme_Basket_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>