force-app/main/default/objects/Scheme_Basket_Product__c/validationRules/Min_Qty_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Qty_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Qty__c &lt;= 0</errorConditionFormula>
    <errorMessage>Minimum quantity must be greater than zero.</errorMessage>
</ValidationRule>